--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esports</title>
@@ -14,8 +20,29 @@
 
     <main>
       <section>
-        <h2 class="">Assistente de Meta</h2>
-        <p>Pergunte sobre estratégias, build e dicas para seus jogos!</p>
+        <div>
+          <h2 class="title">Assistente de Meta</h2>
+          <p>Pergunte sobre estratégias, build e dicas para seus jogos!</p>
+
+          <form>
+            <input type="password" placeholder="Infrome a API KEY do Gemini" />
+
+            <select>
+              <option value="">Selecione um jogo</option>
+              <option value="valorant">Valorant</option>
+              <option value="lol">League of Legends</option>
+              <option value="mobile legends">Mobile Legends</option>
+            </select>
+
+            <input type="text" placeholder="Ex: Melhor build para ADC..." />
+
+            <button>Perguntar</button>
+          </form>
+
+          <div id="AI-Response">
+            <div class="response-content"></div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
