--- a/index.html
+++ b/index.html
@@ -24,26 +24,37 @@
           <h2 class="title">Assistente de Meta</h2>
           <p>Pergunte sobre estratégias, build e dicas para seus jogos!</p>
 
-          <form>
-            <input type="password" placeholder="Infrome a API KEY do Gemini" />
+          <form id="form">
+            <input
+              id="apiKey"
+              type="password"
+              placeholder="Informe a API KEY do Gemini"
+            />
 
-            <select>
+            <select id="gameSelect">
               <option value="">Selecione um jogo</option>
               <option value="valorant">Valorant</option>
               <option value="lol">League of Legends</option>
               <option value="mobile legends">Mobile Legends</option>
             </select>
 
-            <input type="text" placeholder="Ex: Melhor build para ADC..." />
+            <input
+              id="questionInput"
+              type="text"
+              placeholder="Ex: Melhor build para ADC..."
+            />
 
-            <button>Perguntar</button>
+            <button id="askButton">Perguntar</button>
           </form>
 
-          <div id="AI-Response">
+          <div id="AI-Response" class="hidden">
             <div class="response-content"></div>
           </div>
         </div>
       </section>
     </main>
+
+    <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
